--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,9 @@
             <h2>About Me</h2>
             <hr class="intro-divider">
             <br/>
-                <p><font size="4px"> I am Plant Biologist, fascinated with plant physiology, molecular biology, and computational science. </font></p>
-                <p><font size="4px"> I earned my Ph.D. in Genetics from the Federal University of Rio de Janeiro (2016). The main goal was to integrate plant biology and bioinformatics focusing on the study the differentially expressed genes under drought condition and on identifying mechanisms of response to this stress in castor beans. </font></p>
-                <p><font size="4px"> After a year and a half working in a private company in Brazil, I joined <a href="http://girke.bioinformatics.ucr.edu/">Professor Thomas Girke Lab</a> at <a href="https://www.ucr.edu/">UCR</a> in 2017. My current research focuses on the development of computational <a href="http://girke.bioinformatics.ucr.edu/systemPipeR/">data analysis</a> methods for genome biology. My main interests are the development of integrated systems for NGS data analysis for R and Bioconductor open source software projects. The following gives a short summary of my career and the current projects.</font></p>
+                <p><font size="4px"> I am a Chemical Engineer, fascinated with air quality, wildland fire science, and computational science. </font></p>
+                <p><font size="4px"> I am currently pursuing my Ph.D (5th year) in Chemical and Environgmental Engineering from the <a href="https://www.ucr.edu/">University of California, Riverside (UCR)</a>. Currently I am working with <a href="https://barsantigrp.engr.ucr.edu/people/Kelly-barsanti">Dr. Kelley Barsanti</a>. Our <a href="https://barsantigrp.engr.ucr.edu/">group</a> focuses on studying air qualiy by combining both field work and air quality modelling</font></p>
+                <p><font size="4px"> My current research focuses on the development of algorithms for pattern recognition analysis of wildland fire smoke and faster processing of two dimensional gas chroamtography with time-of-flight mass spectrometry (GCxGC-TOFMS) data using <a href="https://www.python.org/">Python</a>.</font></p>
                 
              <br/>
         </div>
