--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,9 @@
             <h2>About Me</h2>
             <hr class="intro-divider">
             <br/>
-                <p><font size="4px"> I am a Chemical Engineer, fascinated with air quality, wildland fire science, and computational science. </font></p>
-                <p><font size="4px"> I am currently pursuing my Ph.D (5th year) in Chemical and Environgmental Engineering from the <a href="https://www.ucr.edu/">University of California, Riverside (UCR)</a>. Currently I am working with <a href="https://barsantigrp.engr.ucr.edu/people/Kelly-barsanti">Dr. Kelley Barsanti</a>. Our <a href="https://barsantigrp.engr.ucr.edu/">group</a> focuses on studying air qualiy by combining both field work and air quality modelling</font></p>
-                <p><font size="4px"> My current research focuses on the development of algorithms for pattern recognition analysis of wildland fire smoke and faster processing of two dimensional gas chroamtography with time-of-flight mass spectrometry (GCxGC-TOFMS) data using <a href="https://www.python.org/">Python</a>.</font></p>
+                <p><font size="4px"> I am a chemical engineer trying to understand how our atmosphere works and how we affect it. My work focuses on the development of algorithms for pattern recognition analysis of wildland fire smoke and faster processing of two dimensional gas chroamtography with time-of-flight mass spectrometry (GCxGC-TOFMS) data using <a href="https://www.python.org/">Python</a>.</font></p>
+                <p><font size="4px"> Currently I am pursuing my Ph.D (5th year) in Chemical and Environgmental Engineering from the <a href="https://www.ucr.edu/">University of California, Riverside (UCR)</a> under the supervision of <a href="https://barsantigrp.engr.ucr.edu/people/Kelly-barsanti">Dr. Kelley Barsanti</a>.</font></p>
+                <p><font size="4px"> I recieved my diploma in Chemical Engineering (emphasis in Environmental Engineering) at the <a href="http://www.upatras.gr/en">University of Patras</a> in Greece in 2016. My undergraduate thesis under the supervision of Dr. Spyros Pandis focused on regional air quality modelling with <a href="https://doi.org/10.1016/j.atmosenv.2006.11.034">PMCAMx</a>.</font></p>
                 
              <br/>
         </div>
